refactor simulation and add eating, animal die